<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartFridge</string>

    <!-- Navigation bar -->
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_list_item">Produits</string>
    <string name="bottom_settings_item">Paramètres</string>

    <!-- Home Page -->
    <string name="app_title">SmartFridge</string>
    <string name="home_first_button">Connecter un SmartFridge</string>
    <string name="first_name_component_title">Frigo principal</string>
    <string name="second_name_component_title">Armoire</string>
    <string name="temperature">Température</string>
    <string name="hygrometry">Hygrométrie</string>
    <string name="degree">%1$s°</string>
    <string name="percentage">%1$s%%</string>
...
    <string name="product_emplacement">Emplacement</string>
    <string name="product_expiration_date">1 jour</string>
    <string name="search_hint">Rechercher . . .</string>
    <string name="sort_product_name_description">Triez selon le nom du produit</string>
    <string name="sort_location_description">Triez selon l\'emplacement du produit</string>
    <string name="sort_expiration_period_description">Triez selon la date de péremeption du produit</string>
    <string name="add_product_description">Add new product</string>

    <!-- Product list pop-up -->
    <string name="ic_close_description">Fermer la pop-up</string>
    <string name="popup_title">Nom du Produit</string>
    <string name="ic_status_description">Statut du produit</string>
    <string name="expiration_date_title">Date de Péremption</string>
    <string name="def_expiration_date">00/00/0000</string>
    <string name="quantity_title">Quantité</string>
    <string name="def_quantity">00</string>
...
    <string name="def_product_ingredients">Ingrédient a, ingrédient b, ingrédient c</string>
    <string name="product_brand_title">Marque</string>
    <string name="def_product_brand">marque</string>
    <string name="product_period_title">Période d\'Expiration</string>
    <string name="def_product_period">1 jour</string>

    <string name="delete_button">Supprimer</string>
    <string name="modify_button">Modifier</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Forms Add Aliment Page -->

    <!--  Button  -->
    <string name="btn_return_product">Ajouter un Produit</string>
    <string name="btn_date">Choisir Date</string>
    <string name="btn_add">Ajouter </string>
    <string name="btn_update">Modifier</string>


    <!--  TextView  -->

...
        <item>Armoire</item>
    </string-array>

    <!-- Sign up texts / sign up page -->
    <string name="main_title">Créer un compte</string>
    <string name="password_title">Mot de passe</string>
    <string name="confirm_password">Confirmation du mot de passe</string>
    <string name="inscription">Inscription</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_sign_up">SignUp</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
...
    <string name="settings_main_title">Settings</string>
    <string name="empty_qr_code">Vous n\'avez pas encore de QR code, veuillez vous inscrire</string>
    <string name="full_qr_code">Votre QR code</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="new_raspberry">Nouveau scanneur</string>
    <string name="content_description_qr">Ajouter un scanneur grâce à ce qr-code</string>
    <string name="new_location">Modifier Emplacements</string>

    <!-- raspberry popup -->
    <string name="raspberry_popup_title">Nouveau Scanneur Détecté</string>
    <string name="raspberry_popup_description">Sélectionnez une location pour enregistrer ce scanneur</string>
    <string name="raspberry_popup_id">ID du scanneur</string>
    <string name="raspberry_popup_id_default">xxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="raspberry_popup_location">Emplacement existant</string>
    <string name="raspberry_popup_new_location">Nouvel emplacement</string>
    <string name="raspberry_popup_save">Enregistrer</string>
    <string name="raspberry_popup_discard">Supprimer</string>
    <string name="raspberry_popup_hint">Nouvel emplacement</string>

    <!-- Strings for how to connect page -->
    <string name="main_title_how_to_connect">Comment se connecter ?</string>
    <string name="sub_title_how_to_connect">Afin de jumeler votre smartphone à un SmartFridge</string>
...
    <!-- location pop-up -->
    <string name="location_popup_title">Emplacements</string>
    <string name="location_popup_description">
        Sélectionnez \'Nouvel Emplacment\' pour ajouter un emplacement ou sélectionnez un
        emplacement existant pour modifier celui-ci.
    </string>
    <string name="scanner_un_code_bar">Scanner un code barre</string>
    <string name="reticule_du_lecteur_de_code_barre">Reticule du lecteur de code barre</string>
    <string name="trouvez_les_ingredients_d_un_produit">Trouvez les ingredients d\'un produit</string>
    <string name="liste_des_ingr_dients">Liste des Ingrédients</string>
    <string name="product_expiration_period_hint">Product expiration period hint</string>
    <string name="image_de_thermom_tre">Image de thermomètre</string>
    <string name="image_d_humidit">Image d\'humidité</string>
...
